[gd_scene load_steps=5 format=2]

[ext_resource path="res://Button.tscn" type="PackedScene" id=1]
[ext_resource path="res://Splash_screen.gd" type="Script" id=2]
[ext_resource path="res://bg4.png" type="Texture" id=3]
[ext_resource path="res://Black.ogg" type="AudioStream" id=4]

[node name="Splash_screen" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1.33484, 1.83997 )
scale = Vector2( 0.349532, 0.349974 )
texture = ExtResource( 3 )
centered = false

[node name="Start" parent="." instance=ExtResource( 1 )]
margin_left = 853.015
margin_top = 438.084
margin_right = 1263.01
margin_bottom = 523.084
hint_tooltip = "
"
text = "START"

[node name="Exit" parent="." instance=ExtResource( 1 )]
margin_left = 856.238
margin_top = 558.69
margin_right = 1266.24
margin_bottom = 643.69
hint_tooltip = "
"
text = "QUIT"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.8
[connection signal="pressed" from="Start" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
